# Clauding

./: .gitignore  CLAUDE.md  LESSONS_LEARNED_RL_RACING.md  README.md  count_loc.py
001/: .gitignore  CLAUDE.md  README.md  TODO.md  dqn_agent.py  inspect_checkpoint.py  preprocessing.py  requirements.txt  test_setup.py  train.py  train_fast_decay.py  visualize_preprocessing.py  watch_agent.py  watch_random_agent.py
002/: .gitignore  CLAUDE.md  DOCUMENTATION_UPDATES.md  LOGGING_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  STATE_MODES.md  benchmark_env.py  benchmark_state_modes.py  ddqn_agent.py  debug_state_dtype.py  debug_synthetic_view.py  inspect_checkpoint.py  preprocessing.py  profile_synthetic.py  quick_speed_test.py  test_agent_quick.py  test_agent_view.py  test_off_track.py  test_setup.py  test_stationary_loophole.py  test_stationary_termination.py  test_straight_full_speed.py  test_synthetic_mode.py  test_training_fix.py  test_vector_mode.py  train.py  watch_agent.py  watch_random_agent.py
002/env/: README.md  car_racing.py
003/: CLAUDE.md  README.md  analyze_brake_steering.py  play_human.py  preprocessing.py  sac_agent.py  test_steering.py
003/env/: car_dynamics.py  car_racing.py
004/: CLAUDE.md  PERFORMANCE_ANALYSIS.md  README.md  SAC_EXPLAINED.md  debug_agent_actions.py  diagnose_steering.py  fix_conv2d_slowdown.py  fix_cpu_slowdown.py  play_human.py  preprocessing.py  requirements.txt  sac_agent.py  test_2d_actions.py  test_acceleration.py  test_deterministic_actions.py  test_replay_buffer_performance.py  test_setup.py  train.py  visualize_visual_state.py  watch_agent.py  watch_random_agent.py
004/env/: car_dynamics.py  car_racing.py
005/: CLAUDE.md  COLLISION_DETECTION_FIX.md  CPU_THREADING_FIX.md  INCREASED_LOOKAHEAD.md  MAGIC_FORMULA_GUI.md  MULTI_CAR_COMPETITIVE_SPEC.md  NO_REVERSE_GEAR_FIX.md  README.md  REFACTORING_NOTES.md  REWARD_REFACTOR.md  SAC_EXPLAINED.md  TIRE_PARAMETERS.md  UV_GUIDE.md  VECTOR_MODE_EXPANSION.md  magic_formula_visualizer.py  play_human.py  play_human_gui.py  preprocessing.py  requirements.txt  sac_agent.py  test_backward_driving.py  test_cpu_threading.py  test_env_detailed.py  test_load_transfer.py  test_multi_car.py  test_rl_state_stability.py  test_setup.py  test_vector_visualization.py  test_waypoint_rewards.py  test_wheel_dynamics.py  train.py  train_cpu_optimized.sh  train_multicar.py  train_selection.py  train_selection_parallel.py  train_vectorenv.py  watch_agent.py
005/env/: car_dynamics.py  car_racing.py
006/: .gitignore  CLAUDE.md  DOMAIN_RANDOMIZATION.md  ENGINE_BRAKING_GUIDE.md  MULTICAR_USAGE.md  MX5_TELEMETRY_CONTROLS.md  NETWORK_HEALTH_GUIDE.md  NETWORK_HEALTH_README.md  OBSERVATION_SPACE_PLAN.md  PHYSICS_FIXES_2025-01-13.md  README.md  REFACTORING_SUMMARY.md  SAC_EXPLAINED.md  SUSPENSION_FIX_SUMMARY.md  SUSPENSION_GUIDE.md  SUSPENSION_OPTIONS.md  TIRE_PARAMETERS.md  TRAINING_COMPARISON.md  analyze_network_health.py  analyze_telemetry.py  benchmark_mps.py  benchmark_mps_amp.py  benchmark_mps_batch.py  benchmark_powertrain.py  code_review.md  constants.py  debug_mps_pin.py  example_domain_randomization.py  frame_buffer.py  magic_formula_visualizer.py  mx5_dyno.py  mx5_engine_telemetry.py  mx5_powertrain.py  mx5_telemetry.py  play_human.py  play_human_gui.py  preprocessing.py  requirements.txt  sac_agent.py  telemetry_viewer.py  (+12 more)
006/config/: __init__.py  constants.py  domain_randomization.py  physics_config.py  rendering_config.py
006/env/: README.md  (+7 more)
LLMArena/: CLAUDE.md  config.py  requirements.txt
LLMath/: .gitignore  CLAUDE.md  config.py  vastai-search.sh  vastai-start.sh  vastai-vllm.sh
LLMgsm8k/: .gitignore  CLAUDE.md  config.py  requirements.txt
checkers/: .gitignore  ACTION_SPACE_ANALYSIS.md  CLAUDE.md  FIXED_ACTION_SPACE_COMPLETE.md  PROGRESS_MONITORING.md  README.md  benchmark_mcts.py  build.sh  build_cpp.bat  build_cpp.sh  config.py  config8x8.py  setup.py  test_checkpoints.py  test_device_switching.py
funk/: CLAUDE.md  README.md
go9x9/: .gitignore  CLAUDE.md  README.md  config.py
grokking/: .gitignore  heatmap.py  main.py
kouhai/: .gitignore  CLAUDE.md  PLAN.md  POSTMORTEM.md  SELF_HOSTING.md  lexer.kou  token.kou
senpai/: .gitignore  CLAUDE.md  POSTMORTEM.md  README.md  SELF_HOSTING.md
toribash/: CLAUDE.md  TODO.md  requirements.txt
whatever/: .gitignore  CLAUDE.md  README.md  ai_device_benchmark.py  aura_sim.py  evolving_creatures.py  evolving_creatures_grid.py  generative_art.py  lumen_jax.py  lumen_optics.py  mlxdebug.py  mlxdebug2.py  particle_swarm.py  particle_swarm_fast.py  particle_swarm_gpu.py  photonic_resonance.py  photonic_resonance_jax.py  plasma_field.py  plasma_jax.py  reaction_diffusion.py  reaction_diffusion_coupled.py  reaction_diffusion_gpu.py  satori_quantum.py  symbiotic_swarm_symphony.py  xenobots_softbody.py
whatever/oscilloscope/: .gitignore  AGC.c  AGC.h  AudioCaptureManager.h  AudioCaptureManager.mm  CMAKE_BUILD_NOTES.md  CMakeLists.txt  Info.plist  LockFreeRingBuffer.c  LockFreeRingBuffer.h  MainWindowController.h  MainWindowController.mm  OscilloscopeView.h  OscilloscopeView.mm  QUALITY_SECURITY_REPORT.md  README.md  Shaders.metal  build.sh  build_and_run.sh  launch_debug.sh  main.mm
whatever/oscilloscope/Testing/Temporary/: CTestCostData.txt
whatever/oscilloscope/test/: test_agc  test_agc.c  test_agc_tsan  test_ringbuffer.c
whatever/oscilloscope/test/test_agc_tsan.dSYM/Contents/Resources/DWARF/: test_agc_tsan
whatever/oscilloscope/test/test_agc_tsan.dSYM/Contents/Resources/Relocations/aarch64/: test_agc_tsan.yml
whatever/oscilloscope/test/test_ringbuffer_asan.dSYM/Contents/Resources/DWARF/: test_ringbuffer_asan
whatever/oscilloscope/test/test_ringbuffer_asan.dSYM/Contents/Resources/Relocations/aarch64/: test_ringbuffer_asan.yml
whatever/oscilloscope/test/test_ringbuffer_tsan.dSYM/Contents/: Info.plist
whatever/oscilloscope/test/test_ringbuffer_tsan.dSYM/Contents/Resources/DWARF/: test_ringbuffer_tsan
whatever/oscilloscope/test/test_ringbuffer_tsan.dSYM/Contents/Resources/Relocations/aarch64/: test_ringbuffer_tsan.yml
(+480 files in other folders)
